--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "blogware",
   "version": "0.0.1",
   "dependencies": {
-    "express": "^4.13.3"
+    "express": "^4.13.3",
+    "gulp": "github:gulpjs/gulp#4.0"
   }
 }
