--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "blogware",
   "version": "0.0.1",
   "dependencies": {
+    "blogware-cli": "github:blogware/blogware-cli#4.0",
     "express": "^4.13.3",
     "gulp": "github:gulpjs/gulp#4.0"
   }
