--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   },
   "dependencies": {
     "blogware-cli": "github:blogware/blogware-cli#4.0",
+    "del": "^2.2.0",
     "express": "^4.13.3",
     "gulp": "github:gulpjs/gulp#4.0",
     "through2": "^2.0.0"
