--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bs-html-injector": "^3.0.0",
     "del": "^2.2.0",
     "express": "^4.13.3",
+    "frontmatter": "0.0.0",
     "gulp": "github:gulpjs/gulp#4.0",
     "through2": "^2.0.0"
   }
