--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gulp": "github:gulpjs/gulp#4.0",
     "gulp-util": "^3.0.7",
     "lodash": "^3.10.1",
+    "moment": "^2.11.1",
     "through2": "^2.0.0"
   }
 }
