--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "blogware-cli": "github:blogware/blogware-cli#4.0",
     "blogware-plugin-handlebars": "^0.0.1",
     "blogware-plugin-markdown": "^0.0.1",
+    "blogware-plugin-sass": "^0.0.1",
     "browser-sync": "^2.11.0",
     "bs-html-injector": "^3.0.0",
     "del": "^2.2.0",
