--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.13.3",
     "frontmatter": "0.0.1",
     "gulp": "github:gulpjs/gulp#4.0",
+    "gulp-gh-pages": "^0.5.4",
     "gulp-util": "^3.0.7",
     "lodash": "^3.10.1",
     "moment": "^2.11.1",
