--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "bin": {
     "blogware": "./bin/blogware.js"
   },
+  "repository": {
+    "url": "https://github.com/blogware/blogware"
+  },
   "dependencies": {
     "blogware-cli": "github:blogware/blogware-cli#4.0",
-    "blogware-plugin-handlebars": "^0.0.1",
+    "blogware-plugin-handlebars": "^0.0.2",
     "blogware-plugin-markdown": "^0.0.1",
     "blogware-plugin-sass": "^0.0.1",
     "browser-sync": "^2.11.1",
